Adapt to page updates - new decimal separator for area column